other-vpol/deny-commands-in-exec-probe/deny-commands-in-exec-probe.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: deny-commands-in-exec-probe
  annotations:
    policies.kyverno.io/title: Deny Commands in Exec Probe in ValidatingPolicy
    policies.kyverno.io/category: Other in Vpol
    policies.kyverno.io/subject: Pod
    kyverno.io/kyverno-version: 1.14.0
    policies.kyverno.io/minversion: 1.19.1
    kyverno.io/kubernetes-version: "1.30"
    policies.kyverno.io/description: >-
      Developers may feel compelled to use simple shell commands as a workaround to
      creating "proper" liveness or readiness probes for a Pod. Such a practice can be discouraged
      via detection of those commands. This policy prevents the use of certain commands
      `jcmd`, `ps`, or `ls` if found in a Pod's liveness exec probe.
spec:
  validationActions: 
    - Audit
  evaluation:
    background:
      enabled: false
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["pods"]
  matchConditions:
    - name: check-liveness-probes-commands-exist
      expression: >-
        object.spec.containers.exists(container, size(container.?livenessProbe.?exec.?command.orValue([])) > 0)
  validations:
    - expression: >-
        object.spec.containers.all(container, 
        !container.?livenessProbe.?exec.?command.orValue([]).exists(command, 
        (command.matches('\\bjcmd\\b') || command.matches('\\bps\\b') || command.matches('\\bls\\b')) && !('probe-command:' + command in exceptions.allowedValues)))
      message: Cannot use commands `jcmd`, `ps`, or `ls` in liveness probes.
