other-vpol/deny-commands-in-exec-probe/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: deny-commands-in-exec-probe
policies:
- ../deny-commands-in-exec-probe.yaml
resources:
- resource.yaml
results:
- isValidatingPolicy: true
  kind: Pod
  policy: deny-commands-in-exec-probe
  resources:
  - badpod01
  - badpod02
  result: fail
- isValidatingPolicy: true
  kind: Pod
  policy: deny-commands-in-exec-probe
  resources:
  - badpod03
  result: fail
- isValidatingPolicy: true
  kind: Pod
  policy: deny-commands-in-exec-probe
  resources:
  - goodpod02
  - goodpod03
  result: pass
- isValidatingPolicy: true
  kind: Pod
  policy: deny-commands-in-exec-probe
  resources:
  - goodpod01
  result: skip
